--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
 		]
 	},
 	"dependencies": {
+		"@chakra-ui/react": "^2.5.1",
+		"@emotion/react": "^11.10.6",
+		"@emotion/styled": "^11.10.6",
+		"framer-motion": "^9.0.4",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0"
 	},
@@ -28,10 +32,10 @@
 		"eslint": "^8.34.0",
 		"eslint-config-prettier": "^8.6.0",
 		"eslint-plugin-react": "^7.32.2",
+		"husky": "^8.0.0",
 		"prettier": "^2.8.4",
 		"typescript": "^4.9.3",
 		"vite": "^4.1.0",
-		"vite-tsconfig-paths": "^4.0.5",
-		"husky": "^8.0.0"
+		"vite-tsconfig-paths": "^4.0.5"
 	}
 }
