--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,9 +1,9 @@
 {
- "bracketSpacing": true,
- "semi": false,
- "singleQuote": false,
- "trailingComma": "all",
- "printWidth": 100,
- "tabWidth": 1,
- "useTabs": true
+	"bracketSpacing": true,
+	"semi": true,
+	"singleQuote": false,
+	"trailingComma": "all",
+	"printWidth": 100,
+	"tabWidth": 1,
+	"useTabs": true
 }
