--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
 	"env": {
 		"browser": true,
-		"es2021": true
+		"es2021": true,
+		"jest": true
 	},
 	"extends": [
 		"eslint:recommended",
@@ -18,6 +19,8 @@
 	"rules": {
 		"indent": ["error", "tab"],
 		"linebreak-style": ["error", "unix"],
-		"quotes": ["error", "double"]
+		"quotes": ["error", "double"],
+		"react/jsx-uses-react": "off",
+		"react/react-in-jsx-scope": "off"
 	}
 }
