--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc && vite build",
+		"test": "jest",
+		"test:watch": "jest --watchAll",
 		"preview": "vite preview",
 		"prepare": "husky install"
 	},
@@ -25,15 +27,24 @@
 		"react-router-dom": "^6.8.1"
 	},
 	"devDependencies": {
+		"@babel/preset-env": "^7.20.2",
+		"@babel/preset-react": "^7.18.6",
+		"@testing-library/dom": "^9.0.0",
+		"@testing-library/jest-dom": "^5.16.5",
+		"@testing-library/react": "^14.0.0",
 		"@types/react": "^18.0.27",
 		"@types/react-dom": "^18.0.10",
 		"@typescript-eslint/eslint-plugin": "^5.52.0",
 		"@typescript-eslint/parser": "^5.52.0",
 		"@vitejs/plugin-react-swc": "^3.0.0",
+		"babel-jest": "^29.4.3",
 		"eslint": "^8.34.0",
 		"eslint-config-prettier": "^8.6.0",
 		"eslint-plugin-react": "^7.32.2",
 		"husky": "^8.0.0",
+		"jest": "^29.4.3",
+		"jest-dom": "^4.0.0",
+		"jest-environment-jsdom": "^29.4.3",
 		"prettier": "^2.8.4",
 		"typescript": "^4.9.3",
 		"vite": "^4.1.0",
